--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.2
+current_version = 0.1.0
 commit = True
 tag = True
 
@@ -7,7 +7,7 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:islex/__init__.py]
+[bumpversion:file:islex-core/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
